2001-03-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (MenuInteraction):
	fixed PopdownDelay when entering a menu item with a non existent sub
	menu

	* fvwm/virtual.c (MapDesk):
	return focus to window on other desk when switching desks

	* fvwm/borders.c (DrawButton):
	fixed core dump

2001-03-28  Dan Espen  <dane@mk.telcordia.com>

	* sample.fvwmrc/Makefile.am (EXTRA_DIST):
	* sample.fvwmrc/DecorMwm:
	* sample.fvwmrc/DecorWin95:
	* sample.fvwmrc/decor_examples: Decors come in separate files,
	Changing to a new decor is remembered.

2001-03-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* NEWS, configure.in:
	changed version to 2.3.31

2001-03-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (DoSnapAttract):
	fixed windows snapping off screen

	* fvwm/borders.c (RedrawBorder):
	rewrote and fixed handle drawing

2001-03-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* sample.fvwmrc/system.fvwm2rc:
	fixed *FvwmIconMan*sort and ...*dontshow resources

	* sample.fvwmrc/decor_examples:
	* sample.fvwmrc/system.fvwm2rc-sample-1:
	* sample.fvwmrc/system.fvwm2rc:
	fixed MenuStyle commands

	* libs/Graphics.c (AllocLinearGradient):
	fixed rounding errors
	(AllocLinearGradient):
	removed debug code

	* fvwm/move_resize.c (CMD_Resize):
	fixed resizing shaded windows

2001-03-27  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/session.c (get_version_string):
	window_flags changed, so state file version should be increased

2001-03-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (setup_style_and_decor):
	* fvwm/builtins.c (CMD_ChangeDecor):
	* fvwm/window_flags.h:
	* fvwm/fvwm.h (struct):
	fixed (?) ChangeDecor/UseDecor/Style problem

2001-03-26  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/add_window.c (setup_style_and_decor): Make useDecor work again.

2001-03-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (ReturnFocusWindow):
	new function

	* fvwm/misc.c (UngrabEm):
	fixed pointer grabbing/focus after a menu closes
