@@ -1,3 +1,8 @@
+2001-03-30  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmIconMan/xmanager.c (check_in_window):
+	fixed memory leak
+
 2001-03-29  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmIconMan/FvwmIconMan.c (Free):
